 [tool.poetry]
name = "hdlagent"
version = "0.1.1"
description = ""
authors = ["Mark Zakharov <mzakharo@ucsc.edu>", "Farzaneh Rabiei <frabieik@ucsc.edu>" , "Jose Renau <renau@ucsc.edu>"]
readme = "README.md"

include = ["resources/common/common.yaml"]

[tool.ruff]
line-length = 130

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.10.0"
octoai-sdk = "^0.10.0"
markdown = "^3.5.2"
vertexai = "^1.0.0"
google-cloud-aiplatform = "^1.39.0"
click = "^8.1.7"
pyrtl = "^0.11.2"
#hdeval = "^0.1.0"
#hdeval = {path = "../hdeval"}
#hdeval = { path = "../hdeval", develop = true }
hdeval = { git = "https://github.com/masc-ucsc/hdeval.git", branch = "main" }
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
