[tool.poetry]
name = "hdlagent"
version = "0.1.0"
description = "A CLI tool for handling HDL evaluations"
authors = ["Mark Zakharov"]

[tool.poetry.dependencies]
python = "^3.8"
Markdown = "^3.6"
hdeval = { git = "https://github.com/masc-ucsc/hdeval.git", branch = "main" }
openai = "^1.35.13"
vertexai = "^1.49.0"
PyYAML = "^6.0"
click = "^8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

